kesz:img mappa és kép

--- a/angeloadam.html
+++ b/angeloadam.html
@@ -11,7 +11,7 @@
     <h1>Tetszőleges szöveg</h1>
     <p>Tetszőleges szöveg bekezdés</p>
     <p>Tetszőleges szöveg bekezdés2</p>
-    <img src="https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/57282_v9_bd.jpg" alt="Ryan papa">
+        <img src="./img/ryan.jpg" alt="Ryan papa">
     
 </body>
 </html>
