--- a/horvathmilan.html
+++ b/horvathmilan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/horvathmilan.css">
-    <title>Document</title>
+    <title>Horváth Milán</title>
 </head>
 <body>
     
