--- a/bankutionlivernoel.html
+++ b/bankutionlivernoel.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     
+<h1> Feladat 2</h1>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis tempora consequatur minima quos nobis, qui ducimus? Reiciendis debitis odio maxime vitae ipsum, aliquid deserunt! Quidem quod sequi ut amet quibusdam. </p>
+
+<p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio atque recusandae quaerat maiores culpa quam voluptate nulla labore, accusamus qui soluta dolorum quasi molestiae tempora laboriosam magni, praesentium voluptatibus facilis! </p>
+
+
+<img src="/images.jfif" alt="mogacs">
+
 </body>
 </html>
