--- a/angyalrobert.html
+++ b/angyalrobert.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angyal Róbert</title>
+    <title>Angyal Róbert feladat</title>
     <link rel="stylesheet" href="angyalrobert.css">
 </head>
 <body>
