--- a/bognarakos.html
+++ b/bognarakos.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>
+        Autoorszem
+    </h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus blanditiis consectetur distinctio! Minus magnam ratione ad? Quibusdam, inventore? Tempore vel impedit aliquam pariatur minus. Libero itaque commodi amet veritatis natus?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic excepturi, necessitatibus eum eaque esse maxime possimus eos quaerat quia rem autem voluptatem similique minus ipsam ad accusantium officiis repellendus blanditiis.</p>
+    <img src="/img/letöltés.jfif" alt="alma">
 </body>
 </html>
