--- a/bankutionlivernoel.html
+++ b/bankutionlivernoel.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bánkuti Olivér Noel Feladat</title>
+<link rel="stylesheet" href="bankutiolivernoel.css">
+
+
 </head>
 <body>
     
