--- a/bankutionlivernoel.html
+++ b/bankutionlivernoel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bánkuti Olivér Noel Feladat</title>
-<link rel="stylesheet" href="bankutiolivernoel.css">
+<link rel="stylesheet" href="./css/bankutiolivernoel.css">
 
 
 </head>
@@ -17,7 +17,7 @@
 <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio atque recusandae quaerat maiores culpa quam voluptate nulla labore, accusamus qui soluta dolorum quasi molestiae tempora laboriosam magni, praesentium voluptatibus facilis! </p>
 
 
-<img src="/images.jfif" alt="mogacs">
+<img src="./img/images.jfif" alt="mogacs">
 
 </body>
 </html>
