--- a/kovacseneseandrea.html
+++ b/kovacseneseandrea.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kovács Emese Andrea Feladat</title>
+    <link rel="stylesheet" href="kovacsemeseandrea.css">
 </head>
 <body>
     <h1>Unikornis</h1>
     <p> Az unikornisok nagyon cukik és szépek.</p>
-    <img src="UNIDAB-37788.jpg" alt="Unikornis">
+    <img src="img/UNIDAB-37788.jpg" alt="Unikornis">
 </body>
 </html>
