--- a/batavilmoslionel.html
+++ b/batavilmoslionel.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Tetszőleges szöveg</h1>
-    <p>Tetszőleges bekezdés1g</p>
+    <p>Tetszőleges bekezdés1</p>
     <p>Tetszőleges bekezdés2</p>
 </body>
 </html>
