--- a/bejandavidsandor.html
+++ b/bejandavidsandor.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Bejan Dávid Sándor Feladat</title>
-    <link rel="stylesheet" href="./bejandavidsandor.css">
+    <link rel="stylesheet" href="./css/bejandavidsandor.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Pacifico&display=swap');
+        </style>
 </head>
 <body>
-    
+    <h1>Címsor</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem, laborum distinctio labore amet dolorem ex est doloribus atque inventore eius voluptatibus harum ipsa eum consequuntur debitis repudiandae adipisci. Sint, corrupti.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In ea, aut fugit laborum harum asperiores nemo earum qui praesentium rerum velit similique debitis maiores eos suscipit. Eum optio incidunt illum.ű</p>
+    <img src="./img/kep.jpg" alt="like">
 </body>
 </html>
