--- a/birkneratilla.html
+++ b/birkneratilla.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="birkneratilla.css">
 </head>
 <body>
-    
+<h1>Birka</h1>
+<p>A birkák naon szeretik a füvet</p>
+<p>A birkák naon nem szeretnek téged</p>
+<img src="img/birka.jpg" alt="birkuci">
 </body>
 </html>
