--- a/birkneratilla.html
+++ b/birkneratilla.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>birkneratilla feladat</title>
-    <link rel="stylesheet" href="birkneratilla.css">
+    <link rel="stylesheet" href="/css/birkneratilla.css">
 </head>
 <body>
 <h1>Birka</h1>
