--- a/kovipatrik.html
+++ b/kovipatrik.html
@@ -14,6 +14,6 @@
 
     <p>toiletetetete</p>
 
-    <img src="img/tigrish.htm" alt="táj">
+    <img src="img/tigrish.jpg" alt="táj">
 </body>
 </html>
