--- a/batavilmoslionel.html
+++ b/batavilmoslionel.html
@@ -11,5 +11,9 @@
     <h1>Tetszőleges szöveg</h1>
     <p>Tetszőleges bekezdés1</p>
     <p>Tetszőleges bekezdés2</p>
+    <br>
+    <div class="morty">
+        <img src="./img/tetszolegeskep.png" alt="morty képe">
+    </div>
 </body>
 </html>
