--- a/molnarjozsef99.html
+++ b/molnarjozsef99.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Molnár József Feladat</title>
     <link rel="stylesheet" href="molnarjozsef99.css">
 </head>
 <body>
