--- a/molnarjozsef99.html
+++ b/molnarjozsef99.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="molnarjozsef99.css">
 </head>
 <body>
-    
+    <h1>Ez egy szép weboldal</h1>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet voluptatem vel, consequuntur laborum, repellat ipsam enim ipsa totam incidunt voluptatum iure pariatur ducimus quasi. Nam consectetur suscipit eius error corrupti?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, voluptatibus debitis aut temporibus tenetur, adipisci aspernatur incidunt molestias quod soluta laborum ut fugit, iste esse provident cum dolorem labore est.</p>
+
+    <img src="./macska_mj.webp" alt="Itt egy macska">
+
 </body>
 </html>
