--- a/bojcsukdavid.html
+++ b/bojcsukdavid.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="bojcsukdavid.css">
 </head>
 <body>
-    
+  <h1>Hello vilag!</h1>  
+  <p>szombat</p>
+  <p>idegbeteg kamionsofor</p>
+  <img src="./szisza.bd.jpg" alt="Cuki szisza!">
 </body>
 </html>
