--- a/bankutioliver.html
+++ b/bankutioliver.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bankuti Oliver Noel</title>
-    <link rel="stylesheet" href="bankutioliver.css">
+    <link rel="stylesheet" href="./css/bankutioliver.css">
 </head>
 <body>
+
+    <h1>Hello chat</h1>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis repudiandae excepturi, sed recusandae non minima. Iste ab dignissimos repudiandae laudantium quibusdam culpa obcaecati consequuntur numquam repellendus sunt? Accusantium, iusto vitae.</p>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates quae maxime velit molestias inventore id libero in, consequatur culpa nesciunt tempore possimus rerum modi hic ducimus cum nemo accusamus ipsum.
+    </p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam corrupti eius, incidunt nostrum ullam eaque inventore amet magnam non ipsa eum totam ea exercitationem molestiae doloremque modi tempora reprehenderit vitae.</p>
+
+    <img src="./img/mogacs.jpg" alt="mogacs">
     
 </body>
 </html>
