--- a/kunbence.html
+++ b/kunbence.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="kunbence.css">
 </head>
 <body>
-    
+    <h1>Cim</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta sit ad maxime quam quo, perspiciatis necessitatibus ab. Vitae neque accusamus dolore rerum quas voluptatem necessitatibus perferendis vel. Consectetur, asperiores sunt.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto sequi exercitationem est. Veniam rerum porro repellendus, quibusdam laborum cum dolorum, reiciendis veritatis voluptas obcaecati nihil? Eius asperiores cumque repellat sit?</p>
+
+<img src="./chillguy_kbb.jpg" alt="chillguy">
+
 </body>
 </html>
