--- a/gyorgytamas2.html
+++ b/gyorgytamas2.html
@@ -15,6 +15,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores delectus totam saepe ut, laudantium consequatur
         adipisci sunt id facilis illum veniam. Doloribus tempore voluptatem ipsa assumenda ducimus consectetur molestias
         veniam.</p>
-</body>
 
+        <img src="./img/kep_gyt.jpg" alt="kep">
+</body>
 </html>
